--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "⛦ 𝙍𝙊𝙃𝘼𝙉 𝐗 𝙈𝙐𝙎𝙄𝘾 ⛦",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://te.legra.ph/file/62fa7c81c56c1ae31c844.jpg",
+    "logo": "https://telegra.ph/file/cfbdee8103102bcb2e5da.jpg",
     "keywords": [
     "python3",
     "telegram",
